--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Ayush Sahani",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.10.1"
+    "mongoose": "^8.10.1",
+    "validator": "^13.12.0"
   }
 }
